--- a/index.html
+++ b/index.html
@@ -23,35 +23,35 @@
         <div class="divider"></div>
         <div class="Project-cards">
             <div class="Summer-House card">
-                <img src="house3 (1).jpg" alt="">
+                <img src="img/house3 (1).jpg" alt="">
                 <h3>Summer House</h3>
             </div>
             <div class="Brick-House card">
-                <img src="house2 (1).jpg" alt="">
+                <img src="img/house2 (1).jpg" alt="">
                 <h3>Brick House</h3>
             </div>
             <div class="Renovated card">
-                <img src="house4 (1).jpg" alt="">
+                <img src="img/house4 (1).jpg" alt="">
                 <h3>Renovated</h3>
             </div>
             <div class="Barn-House card">
-                <img src="house2 (1).jpg" alt="">
+                <img src="img/house2 (1).jpg" alt="">
                 <h3>Barn House</h3>
             </div>
             <div class="Summer-House card">
-                <img src="house3 (1).jpg" alt="">
+                <img src="img/house3 (1).jpg" alt="">
                 <h3>Summer House</h3>
             </div>
             <div class="Brick-House card">
-                <img src="house2 (1).jpg" alt="">
+                <img src="img/house2 (1).jpg" alt="">
                 <h3>Brick House</h3>
             </div>
             <div class="Renovated card">
-                <img src="house4 (1).jpg" alt="">
+                <img src="img/house4 (1).jpg" alt="">
                 <h3>Renovated</h3>
             </div>
             <div class="Barn-House card">
-                <img src="house2 (1).jpg" alt="">
+                <img src="img/house2 (1).jpg" alt="">
                 <h3>Barn House</h3>
             </div>
         </div>
@@ -66,21 +66,21 @@
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <div class="about-cards">
             <div class="card">
-                <img src="team2.jpg" alt="" class="img">
+                <img src="img/team2.jpg" alt="" class="img">
                 <h class="name">John Doe</h>
                 <h4 class="jop">CEO & Founder</h4>
                 <p class="describtion">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <button>Contact</button>
             </div>
             <div class="card">
-                <img src="team1.jpg" alt="" class="img">
+                <img src="img/team1.jpg" alt="" class="img">
                 <h3 class="name">Jane Doe</h3>
                 <h4 class="jop">Architect</h4>
                 <p class="describtion">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <button>Contact</button>
             </div>
             <div class="card">
-                <img src="team3.jpg" alt="" class="img">
+                <img src="img/team3.jpg" alt="" class="img">
                 <h3 class="name">Mike Ross</h3>
                 <h4 class="jop">Architect</h4>
                 <p class="describtion">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
@@ -88,7 +88,7 @@
                 <button>Contact</button>
             </div>
             <div class="card">
-                <img src="team4.jpg" alt="" class="img">
+                <img src="img/team4.jpg" alt="" class="img">
                 <h3 class="name">Dan Star</h3>
                 <h4 class="jop">Architect</h4>
                 <p class="describtion">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
@@ -108,7 +108,7 @@
             <input type="text" name="Comment" placeholder="Comment" required>
             <button type="submit">Send Message</button>
         </form>
-        <img src="map.jpg" alt="" class="map">
+        <img src="img/map.jpg" alt="" class="map">
     </section>
 </body>
 </html>
